Solved indicator alignement for dropdown select firefox

--- a/client/src/less/dropdown.less
+++ b/client/src/less/dropdown.less
@@ -16,7 +16,7 @@
 .select2 {
     position: relative;
 
-    &, .select2-selection{
+    .select2-selection{
         display: block;
     }
 
